Added:Pin,Archive,Colour note and Colaborator table
